k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: 277361137034.dkr.ecr.ap-northeast-1.amazonaws.com/learning-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
