k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learning-app
  template:
    metadata:
      labels:
        app: learning-app
    spec:
      containers:
        - name: app
          image: learning-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
        - name: db
          image: postgres:15
          ports:
            - containerPort: 5432
