k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: test
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
